# Calorix

./: .gitignore  CMakeLists.txt  Constants.h  README.md
Calorix_Project/: CalorixSystem.cpp  CalorixSystem.h  Constants.h  Engine.cpp  Engine.h  main.cpp
Calorix_Project/comands/: AdminCommands.cpp  AdminCommands.h  CommandParser.cpp  CommandParser.h  GeneralCommands.cpp  GeneralCommands.h  ICommand.h  LoginCommands.cpp  LoginCommands.h  TraineeCommands.cpp  TraineeCommands.h
Calorix_Project/managers/: BlockedUserManager.cpp  BlockedUserManager.h  DiaryManager.cpp  DiaryManager.h  ExerciseManager.cpp  ExerciseManager.h  FileManager.cpp  FileManager.h  FoodManager.cpp  FoodManager.h  RecipeManager.cpp  RecipeManager.h  UserManager.cpp  UserManager.h
Calorix_Project/model/: Admin.cpp  Admin.h  CalorixExceptions.h  Date.cpp  Date.h  Enums.h  Exercise.cpp  ExerciseEntry.cpp  ExerciseEntry.h  FitnessGoal.cpp  FitnessGoal.h  Food.cpp  Food.h  FoodBuilder.cpp  FoodBuilder.h  FoodEntry.cpp  FoodEntry.h  HarrisBenedictStrategy.cpp  HarrisBenedictStrategy.h  ICalorieCalculator.h  IConsumable.h  MifflinStJeorStrategy.cpp  MifflinStJeorStrategy.h  Password.cpp  Password.h  Recipe.cpp  Recipe.h  Trainee.cpp  Trainee.h  User.cpp  User.h  UserBuilder.cpp  UserProfile.cpp  UserProfile.h  UserProfileBuilder.cpp  UserProfileBuilder.h  WHOStrategy.cpp  WHOStrategy.h
model/: Admin.cpp  Admin.h  CalorixExceptions.h  Date.h  Enums.h  Exercise.cpp  Exercise.h  Food.cpp  Food.h  FoodBuilder.h  Password.cpp  Password.h  User.cpp  User.h  UserBuilder.h  UserProfile.cpp
src/: Constants.h
src/model/: Enums.h  User.cpp  User.h  UserProfile.h
